--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="ausente">Ausente</string>
     <string name="salvar">Salvar</string>
     <string name="nome_e_obrigatorio">Nome é obrigatório!</string>
+    <string name="guest_saved_with_success">Convidado foi salvo com sucesso!</string>
+    <string name="error_saving_guest">Ops! Erro ao salvar</string>
 </resources>
