--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="guest_saved_with_success">Convidado foi salvo com sucesso!</string>
     <string name="error_saving_guest">Ops! Erro ao salvar</string>
     <string name="remocao_convidado">Remoção de Convidado</string>
+    <string name="total">Total</string>
 </resources>
