--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="remocao_convidado">Remoção de Convidado</string>
     <string name="total">Total</string>
     <string name="guest_removed">Convidado removido com sucesso!</string>
+    <string name="document">Documento</string>
 </resources>
