Changing CRUD screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="guest_removed">Convidado removido com sucesso!</string>
     <string name="document">Documento</string>
     <string name="gerenciamento_de_convidados">Gerenciamento de convidados</string>
+    <string name="confirmation">Confirmação</string>
 </resources>
