--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="document">Documento</string>
     <string name="gerenciamento_de_convidados">Gerenciamento de convidados</string>
     <string name="confirmation">Confirmação</string>
+    <string name="cpf">418.211.683.94</string>
+    <string name="eloa_name">Eloá Vitória</string>
 </resources>
